<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    tools:context=".MoveForResultActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:text="@string/pilih_angka_yang_kamu_sukai"
        />

    <RadioGroup
        android:id="@+id/rg_choose_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <RadioButton
            android:id="@+id/rb_11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_11"
            />
        <RadioButton
            android:id="@+id/rb_7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_7"
            />
        <RadioButton
            android:id="@+id/rb_10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_10"
            />
        <RadioButton
            android:id="@+id/rb_87"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_87"
            />
        <RadioButton
            android:id="@+id/rb_90"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_90"
            />

    </RadioGroup>

    <Button
        android:id="@+id/btn_choose"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.AppCompat.Button.Colored"
        android:text="@string/choose"
        />

</LinearLayout>