<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    tools:context=".MainActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <Button
                android:id="@+id/btn_move_activity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:text="@string/pindah_activity" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/edt_name"
                    android:hint="Nama Anda"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    />
                <EditText
                    android:id="@+id/edt_age"
                    android:hint="Usia Anda (Tahun)"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:layout_weight="1"
                    />
            </LinearLayout>

            <Button
                android:id="@+id/btn_move_with_data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                style="@style/Widget.AppCompat.Button.Colored"
                android:text="@string/pindah_activity_dengan_data" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <EditText
                    android:id="@+id/edt_yourname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="Your Name"/>
                <EditText
                    android:id="@+id/edt_yourage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Your Old (Years)"
                    android:layout_weight="1"
                    android:inputType="numberDecimal"
                    />
            </LinearLayout>

            <EditText
                android:id="@+id/edt_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="email"
                android:inputType="textEmailAddress"
                />
            <EditText
                android:id="@+id/edt_city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="City"
                />

            <Button
                android:id="@+id/btn_move_with_object"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                style="@style/Widget.AppCompat.Button.Colored"
                android:text="@string/pindah_activity_dengan_object" />

            <Button
                android:id="@+id/btn_dial_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dial_number"
                android:layout_marginBottom="@dimen/activity_vertical_margin"/>

            <Button
                android:id="@+id/btn_move_for_result"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.AppCompat.Button.Colored"
                android:text="@string/pindah_activity_untuk_result"
                android:layout_marginBottom="@dimen/activity_vertical_margin"/>

            <TextView
                android:id="@+id/tv_result"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="24sp"
                android:text="@string/hasil"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>